[gd_scene load_steps=11 format=3 uid="uid://c0lnmqnryw0yu"]

[ext_resource type="Script" path="res://GameBoard.gd" id="1_52xhi"]
[ext_resource type="PackedScene" uid="uid://gxpf67fi4v1u" path="res://orb_red.tscn" id="2_dal3a"]
[ext_resource type="PackedScene" uid="uid://pchpvc6oi1lh" path="res://orb_orange.tscn" id="3_cwtbx"]
[ext_resource type="PackedScene" uid="uid://byoc6x5rbit8e" path="res://orb_yellow.tscn" id="4_15g41"]
[ext_resource type="PackedScene" uid="uid://cek4swsdbynht" path="res://orb_green.tscn" id="5_iplkc"]
[ext_resource type="PackedScene" uid="uid://dw70p86jt1okb" path="res://orb_indigo.tscn" id="6_gli5h"]
[ext_resource type="PackedScene" uid="uid://bjct3m3rr60ve" path="res://orb_violet.tscn" id="7_xxegl"]
[ext_resource type="PackedScene" uid="uid://dc0pv4ic6ybm7" path="res://orb_pride.tscn" id="8_ty5k7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40rh3"]
size = Vector2(20, 111)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d1hke"]
size = Vector2(704, 8)

[node name="GameBoard" type="CanvasLayer"]
layer = 0
script = ExtResource("1_52xhi")
red_orb_scene = ExtResource("2_dal3a")
orange_orb_scene = ExtResource("3_cwtbx")
yellow_orb_scene = ExtResource("4_15g41")
green_orb_scene = ExtResource("5_iplkc")
indigo_orb_scene = ExtResource("6_gli5h")
violet_orb_scene = ExtResource("7_xxegl")
pride_orb_scene = ExtResource("8_ty5k7")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.666667, 0.733333, 1)

[node name="Box" type="StaticBody2D" parent="."]
position = Vector2(-64, -16)

[node name="ColorRect" type="ColorRect" parent="Box"]
offset_left = 240.0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 640.0
color = Color(0.666667, 1, 0.933333, 1)

[node name="ColorRect2" type="ColorRect" parent="Box"]
offset_left = 256.0
offset_top = 624.0
offset_right = 960.0
offset_bottom = 640.0
color = Color(0.666667, 1, 0.933333, 1)

[node name="ColorRect3" type="ColorRect" parent="Box"]
offset_left = 960.0
offset_top = 128.0
offset_right = 976.0
offset_bottom = 640.0
color = Color(0.666667, 1, 0.933333, 1)

[node name="BoxCollisionShape" type="CollisionPolygon2D" parent="Box"]
polygon = PackedVector2Array(240, 128, 240, 640, 976, 640, 976, 128, 960, 128, 960, 624, 256, 624, 256, 128)

[node name="PlacementMarker" type="Marker2D" parent="."]
position = Vector2(544, 47)

[node name="NextMarker" type="Marker2D" parent="."]
position = Vector2(1047, 128)

[node name="DropTimer" type="Timer" parent="."]
one_shot = true

[node name="StopLeft" type="Area2D" parent="."]
position = Vector2(185, 56)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StopLeft"]
shape = SubResource("RectangleShape2D_40rh3")

[node name="StopRight" type="Area2D" parent="."]
position = Vector2(903, 56)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StopRight"]
shape = SubResource("RectangleShape2D_40rh3")

[node name="OutOfBounds" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="OutOfBounds"]
polygon = PackedVector2Array(-40, 0, -40, 704, 1200, 704, 1200, -128, -40, -128, -40, -104, 1152, -104, 1152, 648, 0, 648, 0, -104, -40, -104)

[node name="FullUp" type="Area2D" parent="."]
position = Vector2(544, 102)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullUp"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_d1hke")

[node name="FullUpTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="NextLabel" type="Label" parent="."]
offset_left = 1012.0
offset_top = 40.0
offset_right = 1085.0
offset_bottom = 66.0
text = "Next orb:"
horizontal_alignment = 1

[node name="RoundMessageLabel" type="Label" parent="."]
offset_left = 52.0
offset_top = 40.0
offset_right = 125.0
offset_bottom = 66.0
text = "Round:"
horizontal_alignment = 1

[node name="RoundNumberLabel" type="Label" parent="."]
offset_left = 52.0
offset_top = 60.0
offset_right = 125.0
offset_bottom = 86.0
text = "0"
horizontal_alignment = 1

[node name="OverMessageLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = 128.0
offset_right = 160.0
offset_bottom = 184.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
[connection signal="body_entered" from="StopLeft" to="." method="_on_stop_left_body_entered"]
[connection signal="body_exited" from="StopLeft" to="." method="_on_stop_left_body_exited"]
[connection signal="body_entered" from="StopRight" to="." method="_on_stop_right_body_entered"]
[connection signal="body_exited" from="StopRight" to="." method="_on_stop_right_body_exited"]
[connection signal="body_entered" from="OutOfBounds" to="." method="_on_out_of_bounds_body_entered"]
[connection signal="body_entered" from="FullUp" to="." method="_on_full_up_body_entered"]
[connection signal="body_exited" from="FullUp" to="." method="_on_full_up_body_exited"]
[connection signal="timeout" from="FullUpTimer" to="." method="_on_full_up_timer_timeout"]
